--- a/index.html
+++ b/index.html
@@ -1,3 +1,37 @@
-<h1>test webpage</h1>
+<h1>Fav Cars And Upgrades</h1>
+<p>the information below are recommended cars and parts to help your get the best out of you car</p>
 <img src="./images/cr9test.jpg">
-<button>go fast!</button>
+<img src="images/ford mustang pic.jpg"width="200"height="200">
+<img src="images/Honda-Logo-1973.webp"width="200"height="200">
+
+<h2>Car Parts</h2>
+<p>commonly changed parts to help get most of your car</p>
+<ul>
+    <li>alternator</li>
+    <li>calipers</li>
+    <li>brakes</li>
+    <li>motor mounts</li>
+    <li>sparkplugs</li>
+</ul>
+    <h3>Recommended Cars</h3>
+<ol>
+    <li>2018 Nissian Altima SR</li>
+    <li>1999 Honda Civic Si DOHC VTEC</li>
+    <li>2000 Ford Mustang GT Deluxe Edition</li>
+    <li>2018 Nissian Maxima Midnight Edition</li>
+    <li>2018 Honda Civic Type R </li>
+</ol>
+
+
+
+
+   <h3>History</h3>
+    <p>list of history links</p>
+    
+   <ol>
+<li><a href="https://www.honda.com/history">honda</a></li>
+<li><a href="https://corporate.ford.com/about/history.html">Ford</a></li>
+<li><a href="https://www.nissanusa.com/about/heritage.html">nissian</a></li>
+</ol>
+
+
